# fernjit

./: Cargo.toml  LICENSE  Makefile  README.md
.github/: labeler.yaml
.github/workflows/: ci.yaml  coverage.yaml  lint.yaml  pr.yaml
enum_tags/: Cargo.toml
enum_tags/src/: lib.rs
fern/: Cargo.toml
fern/src/: arch.rs  coding.rs  lib.rs  op.rs  opcode.rs  program.rs  vm.rs
jit/: Cargo.toml
jit/src/: executable_memory.rs  lib.rs
src/: arch.rs  coding.rs  executable_memory.rs  instruction.rs  lib.rs  main.rs  opcode.rs  vm.rs
