[workspace]
members = ["enum_tags", "fern", "jit"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
license-file = "LICENSE"

[workspace.dependencies]
libc = "0.2.167"
paste = "1.0.15"
static_assertions = "1.1.0"
syn = { version = "2.0.90", features = ["parsing"] }
quote = "1.0.37"
proc-macro2 = "1.0.92"
num-traits = "0.2.19"
