[workspace]
members = ["enum_tags", "fern", "jit"]
resolver = "2"

[workspace.package]
repository = "https://github.com/ethanuppal/fernjit"
readme = "README.md"
version = "0.0.0"
edition = "2021"
license-file = "LICENSE"

[workspace.dependencies]
libc = "0.2.167"
paste = "1.0.15"
static_assertions = "1.1.0"
syn = "2.0.90"
quote = "1.0.37"
proc-macro2 = "1.0.92"
enum_tags = { path = "enum_tags/", package = "fern-enum-tags", version = "0.0.0" }
