[package]
name = "fern-enum-tags"
description = "Variant tags for enums with fields too"
repository.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
