[package]
name = "fern-vm"
description = "The fern bytecode runtime"
repository.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
paste.workspace = true
static_assertions.workspace = true
num-traits.workspace = true
enum_tags.workspace = true
